--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,6 +2,7 @@ nav{
     display: flex;
     justify-content: center;
     padding: 10px;
+    border-bottom: 1px solid rgb(202, 202, 202);
 }
 
 nav a{
