--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,6 @@
 footer{
-    background-color: gray;
+    background-color: rgb(183, 183, 183);
     color: white;
-    font-weight: bold;
     position: absolute;
     bottom: 0;
     width: 100%;
