--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,13 @@ input, textarea{
   color: #000;
   border: 1px solid #000;
 }
+.btn-danger{
+  background-color: transparent;
+  color: red;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
 .btn:hover{
   background-color: #0F730c;
   color: #FFF;
