--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,8 @@
 footer{
     background-color: rgb(183, 183, 183);
     color: white;
-    position: absolute;
     bottom: 0;
-    width: 100%;
+    width: auto;
+    padding: 3px;
+    margin-top: 1%;
 }
